[package]
name = "toml-parse"
version = "0.1.1"
authors = ["Devin R <devin.ragotzy@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Set of modules for parsing, sorting and formating toml."
repository = "https://github.com/DevinR528/toml-parse"
keywords = ["parse", "sort", "format"]
categories = ["parsing", "development-tools"]
edition = "2018"
readme = "README.md"

[dependencies]
chrono = "0.4"
rowan = "0.9"
muncher = "0.5"
